FIX: display flex on iOS

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -64,12 +64,9 @@
 
 .team-listing {
 	display: -ms-flexbox;
-	display: -webkit-flex;
 	display: flex;
-	-webkit-flex-wrap: wrap;
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
-	-webkit-align-items: flex-start;
 	-ms-flex-align: start;
 	align-items: flex-start;
 	align-content: stretch;
